working on responsiveness

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     </h1>
                 </div>
 
-                <div class="absolute bottom-[70px] right-[20px] transform translate-y-[100%]">
+                <div class="absolute left-[50%] transform -translate-x-[50%] md:-translate-x-[0%] bottom-[70px] md:right-[20px] translate-y-[100%]">
                     <div
                         class="w-[350px] bg-primaryBlue/75 text-white text-[14px] lg:text-xl font-bold relative p-[20px] rounded-[10px]">
                         <p>
@@ -130,7 +130,7 @@
             </div>
         </div>
 
-        <div class="w-full flex flex-col items-center">
+        <div class="w-full flex flex-col items-center mt-[30px]">
             <!-- about section -->
             <div id="about-section">
                 <div
@@ -277,7 +277,7 @@
             <!-- footer -->
             <div id="footer-section" class="w-full mt-[-40px]">
                 <div class='w-full flex flex-col items-center gap-[30px] bg-primaryBlue pt-[120px] pb-[100px]'>
-                    <div class="w-full lg:w-[90%] flex items-center gap-[20px] text-white px-[40px]">
+                    <div class="w-full lg:w-[90%] flex items-center justify-center md:gap-[20px] text-white p-[10px] md:px-[40px]">
                         <div class="hidden md:block">
                             <img src="assets/logo.png" alt="logo" class="w-[170px] h-[170px] object-contain " />
                         </div>
