working on responsive design

--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
                     </h1>
                 </div>
 
-                <div class="absolute left-[50%] transform -translate-x-[50%] md:-translate-x-[0%] bottom-[70px] md:right-[20px] translate-y-[100%]">
+                <div
+                    class="absolute left-[50%] transform -translate-x-[50%] md:-translate-x-[0%] bottom-[70px] md:right-[20px] translate-y-[100%]">
                     <div
                         class="w-[350px] bg-primaryBlue/75 text-white text-[14px] lg:text-xl font-bold relative p-[20px] rounded-[10px]">
                         <p>
@@ -146,21 +147,29 @@
 
                     <div class="w-full flex flex-col md:flex-row items-start justify-between gap-[50px] mt-[70px]">
                         <div class="w-full md:w-1/2 flex flex-col gap-[30px]">
-                            <p>Are you overwhelmed by debt and afraid of getting sued by your creditors? American
-                                Legal Club specializes in creditor defense. We provide reliable access to pre-vetted
-                                attorneys at pre-negotiated rates. Our primary focus is ensuring you have robust
-                                legal support should you face legal actions from unsecured creditors.</p>
+                            <p>Are you overwhelmed by debt and afraid of getting sued by your creditors? American Legal
+                                Club
+                                specializes in creditor defense. We provide reliable access to pre-vetted attorneys at
+                                pre-negotiated
+                                rates. Our primary focus is ensuring you have robust legal support should you face legal
+                                actions from
+                                unsecured creditors.</p>
                             <p>American Legal Club was founded to bridge the gap between legal needs and affordable
-                                solutions. Our mission is to provide a specialized line of defense against unsecured
-                                creditors. Our network of pre-vetted, highly qualified attorneys is focused on
-                                creditor defense to help you navigate the challenges of legal actions against you.
+                                solutions. Our
+                                mission is to provide a specialized line of defense against unsecured creditors. Our
+                                network of pre-
+                                vetted, highly qualified attorneys is focused on creditor defense to help you navigate
+                                the challenges of
+                                legal actions against you.
                             </p>
 
                             <div class="flex flex-col gap-[10px]">
                                 <h1 class="text-2xl font-[700]">Our Mission:</h1>
                                 <p>Our mission is to revolutionize the way people think about legal help. We believe
-                                    that everyone should have the means to understand and protect their rights,
-                                    particularly when it comes to financial wellness and creditor defense.</p>
+                                    that everyone should
+                                    have the means to understand and protect their rights, particularly when it comes to
+                                    financial wellness
+                                    and creditor defense.</p>
                             </div>
                         </div>
 
@@ -277,7 +286,8 @@
             <!-- footer -->
             <div id="footer-section" class="w-full mt-[-40px]">
                 <div class='w-full flex flex-col items-center gap-[30px] bg-primaryBlue pt-[120px] pb-[100px]'>
-                    <div class="w-full lg:w-[90%] flex items-center justify-center md:gap-[20px] text-white p-[10px] md:px-[40px]">
+                    <div
+                        class="w-full lg:w-[90%] flex items-center justify-center md:gap-[20px] text-white p-[10px] md:px-[40px]">
                         <div class="hidden md:block">
                             <img src="assets/logo.png" alt="logo" class="w-[170px] h-[170px] object-contain " />
                         </div>
@@ -298,13 +308,9 @@
                             </div>
 
                             <ul class="flex items-center justify-center flex-wrap lg:flex-nowrap gap-[30px]">
-                                <li>Terms and Conditions</li>
-                                <li>About Us</li>
-                                <li>Services</li>
-                                <li>Help Center</li>
-                                <li>Workflow</li>
-                                <li>FAQs</li>
-                                <li>Contact Us</li>
+                                <li>Privacy Policy</li>
+                                <li>Terms &amp; Conditions</li>
+                                <li>TCPA Consent</li>
                             </ul>
                         </div>
                     </div>
