--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Your Website</title>
+    <title>American Legal Club</title>
     <link href="css/main.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script>
@@ -62,9 +62,9 @@
             <div class='bg-primaryBlue flex items-center justify-center text-white p-[15px]'>
                 <ul class='flex items-center gap-[40px]'>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Workflow</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="workflow.html">Workflow</a></li>
                     <li><a href="#">Contact Us</a></li>
                     <li><a href="#">FAQs</a></li>
                 </ul>
@@ -97,10 +97,10 @@
                             <i class="fa-solid fa-xmark" aria-hidden="true"></i>
                         </div>
                         <ul class='mt-[50px] w-full p-[20px] font-bold text-white flex flex-col items-center gap-[20px]'>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Workflow</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About Us</a></li>
+                            <li><a href="services.html">Services</a></li>
+                            <li><a href="workflow.html">Workflow</a></li>
                             <li><a href="#">Contact Us</a></li>
                             <li><a href="#">FAQs</a></li>
                         </ul>
