--- a/services.html
+++ b/services.html
@@ -118,6 +118,32 @@
                 <span class="text-primaryRed">Our</span> Services
             </h1>
         </div>
+
+        <div
+        class="mt-[30px] w-full flex flex-col items-center border border-slate-300 shadow-xl rounded-lg p-[5px] lg:p-[20px] bg-white">
+        <div>
+            <div class="flex flex-col md:flex-row items-center gap-[20px] lg:gap-[70px] mt-[50px]">
+                <div
+                    class="w-[300px] h-[400px] bg-gray1 flex flex-col items-center gap-[20px] rounded-lg p-[20px] shadow-xl">
+                    <img src="assets/law-icon.png" alt="icon" class="w-[70px] h-[70px]" />
+                    <h1 class="text-primaryRed text-xl font-bold">Specialized Creditor Defense</h1>
+                    <p>For a non-refundable monthly fee, secure your robust line of defense against
+                        unsecured creditors. This fee ensures your access to pre-vetted attorneys who
+                        specialize in creditor defense.</p>
+                </div>
+
+                <div
+                    class="w-[300px] h-[400px] bg-gray1 flex flex-col items-center gap-[20px] rounded-lg p-[20px] shadow-xl">
+                    <img src="assets/person-icon.png" alt="icon" class="w-[70px] h-[70px]" />
+                    <h1 class="text-primaryRed text-xl font-bold">Pre-Negotiated Rates With Top Lawyers
+                    </h1>
+                    <p>Our network of attorneys are skilled in creditor defense and are available at
+                        rates you can afford.</p>
+                </div>
+
+            </div>
+        </div>
+    </div>
     </main>
 </body>
 
