--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>About Page</title>
+    <title>Contact Us</title>
     <link href="css/main.css" rel="stylesheet" />
     <link
       rel="stylesheet"
@@ -29,8 +29,6 @@
     </script>
   </head>
   <body>
-    <!-- overlay -->
-    <div id="overlay" class="hideOverlay"></div>
     <header>
       <nav>
         <!-- Navbar -->
@@ -147,83 +145,83 @@
         </div>
       </nav>
     </header>
+    <main class="px-[20px] lg:px-[100px]">
+      <div
+        class="w-full flex flex-col md:flex-row items-start justify-evenly gap-[50px] mt-[70px]"
+      >
+        <div>
+          <h1 class="text-4xl font-bold">Get in touch</h1>
+          <form class="mt-[30px] flex flex-col gap-[20px]">
+            <div class="w-[350px] flex flex-col gap-[3px]">
+              <label class="font-bold"> Name </label>
+              <input
+                type="text"
+                placeholder="Name"
+                class="border border-slate-500 p-[8px] rounded-[4px] outline-none"
+              />
+            </div>
 
-    <main class="w-full min-h-[70vh] flex flex-col items-center mt-[30px]">
-      <div>
-        <div class="w-full md:w-max">
-          <h1 class="text-primaryBlue text-3xl font-[800]">
-            <span class="text-primaryRed">Frequently</span> Asked Questions
-          </h1>
-          <div class="w-[170px] h-[2px] rounded-[25px] bg-primaryRed"></div>
+            <div class="w-[350px] flex flex-col gap-[3px]">
+              <label class="font-bold"> Your email </label>
+              <input
+                type="email"
+                placeholder="yourmail@gmail.com"
+                class="border border-slate-500 p-[8px] rounded-[4px] outline-none"
+              />
+            </div>
+
+            <div class="w-[350px] flex flex-col gap-[3px]">
+              <label class="font-bold"> How can I we help? </label>
+              <textarea
+                placeholder="Enter your message here"
+                class="border border-slate-500 p-[8px] rounded-[4px] outline-none text-base resize-none"
+              ></textarea>
+            </div>
+
+            <button
+              class="bg-primaryBlue text-lg text-white px-[30px] py-[8px]"
+            >
+              Send me message
+            </button>
+          </form>
+        </div>
+        <div class="w-full md:w-1/2">
+          <img
+            src="assets/heroImage.jpg"
+            alt="mainImage"
+            class="w-full h-[500px] object-cover shadow-2xl"
+          />
         </div>
       </div>
 
-      <div class="mt-[70px] flex flex-col gap-[20px]">
-        <div id="faq1" class="relative w-full lg:w-[600px]">
-          <div class="flex items-center justify-between gap-[20px]">
-            <p class="text-lg font-bold">
-              <span class="text-primaryRed">1.</span> Is American Legal Club a
-              Law Firm?
-            </p>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-            >
-              <path
-                d="M7.33 24l-2.83-2.829 9.339-9.175-9.339-9.167 2.83-2.829 12.17 11.996z"
-              />
-            </svg>
+      <div class="mt-[40px]">
+        <h1 class="text-center text-2xl font-bold">Get in touch anytime</h1>
+
+        <div class=" mt-[40px] w-full flex justify-center items-center gap-[20px]">
+          <div class="w-[250px] flex flex-col gap-[10px]">
+            <h1 class="font-bold">Email</h1>
+            <p class="pl-[10px]">AmericanLegalClub@gmail.com</p>
+            <div class="bg-slate-500 w-full h-[2px]"></div>
           </div>
 
-          <div id="faqAnswer1" class="hideAnswer">
-            <p>
-              No, we are not a law firm and do not provide legal advice. We
-              specialize in facilitating access to attorneys for creditor
-              defense.
-            </p>
-          </div>
-        </div>
-
-        <div class="bg-slate-500 w-full h-[2px]"></div>
-
-        <div id="faq2" class="relative w-full lg:w-[600px]">
-          <div class="flex items-center justify-between gap-[20px]">
-            <p class="text-lg font-bold">
-              <span class="text-primaryRed">2.</span> How do I pay for the
-              service?
-            </p>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-            >
-              <path
-                d="M7.33 24l-2.83-2.829 9.339-9.175-9.339-9.167 2.83-2.829 12.17 11.996z"
-              />
-            </svg>
+          <div class="w-[250px] flex flex-col gap-[10px]">
+            <h1 class="font-bold">Phone</h1>
+            <p class="pl-[10px]">xxxxxxxxx</p>
+            <div class="bg-slate-500 w-full h-[2px]"></div>
           </div>
 
-          <div id="faqAnswer2" class="hideAnswer">
-            <p>
-              Payments are processed through third-party payment processors,
-              ensuring secure and seamless transactions.
-            </p>
+          <div class="w-[250px] flex flex-col gap-[10px]">
+            <h1 class="font-bold">Fax</h1>
+            <p class="pl-[10px]">xxxxxxxxx</p>
+            <div class="bg-slate-500 w-full h-[2px]"></div>
+          </div>
+
+          <div class="w-[250px] flex flex-col gap-[10px]">
+            <h1 class="font-bold">Address</h1>
+            <p class="pl-[10px]">xxxxxxxxx</p>
+            <div class="bg-slate-500 w-full h-[2px]"></div>
           </div>
         </div>
-      </div>
-
-      <div class="mt-[50px] flex flex-col gap-[30px]">
-        <div class="w-max flex flex-col gap-[3px]">
-            <h1 class="text-xl text-primaryBlue font-bold">Still Have Question?</h1>
-            <div class="bg-primaryRed w-full h-[2px]"></div>
-        </div>
-
-        <button class="bg-primaryBlue px-[30px] py-[10px] rounded-[4px] text-white text-lg">
-            Contact us
-        </button>
       </div>
     </main>
 
@@ -294,20 +292,5 @@
         </div>
       </div>
     </footer>
-
-    <script>
-      const faq1 = document.getElementById("faq1");
-      const faq2 = document.getElementById("faq2");
-      const faqAnswer1 = document.getElementById("faqAnswer1");
-      const faqAnswer2 = document.getElementById("faqAnswer2");
-
-      faq1.addEventListener("click", () => {
-        faqAnswer1.classList.toggle("hideAnswer");
-      });
-
-      faq2.addEventListener("click", () => {
-        faqAnswer2.classList.toggle("hideAnswer");
-      });
-    </script>
   </body>
 </html>
