added active links

--- a/faq.html
+++ b/faq.html
@@ -78,14 +78,14 @@
           <div
             class="bg-primaryBlue flex items-center justify-center text-white p-[15px]"
           >
-            <ul class="flex items-center gap-[40px]">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="services.html">Services</a></li>
-              <li><a href="workflow.html">Workflow</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
-              <li><a href="faq.html">FAQs</a></li>
-            </ul>
+          <ul class='flex items-center gap-[40px]'>
+            <li><a href="index.html" id="home">Home</a></li>
+            <li><a href="about.html" id="about">About Us</a></li>
+            <li><a href="services.html" id="services">Services</a></li>
+            <li><a href="workflow.html" id="workflow">Workflow</a></li>
+            <li><a href="contact.html" id="contact">Contact Us</a></li>
+            <li><a href="faq.html" id="faq" class="bg-white p-[10px] rounded-[4px] text-primaryBlue">FAQs</a></li>
+        </ul>
           </div>
         </div>
         <!-- mobile navbar -->
@@ -217,7 +217,7 @@
 
       <div class="mt-[50px] flex flex-col gap-[30px]">
         <div class="w-max flex flex-col gap-[3px]">
-            <h1 class="text-xl text-primaryBlue font-bold">Still Have Question?</h1>
+            <h1 class="text-xl text-primaryBlue font-bold">Still Have Questions?</h1>
             <div class="bg-primaryRed w-full h-[2px]"></div>
         </div>
 
