--- a/workflow.html
+++ b/workflow.html
@@ -62,13 +62,14 @@
             <div id="navbar-section" class="sticky top-0 z-10 hidden md:block">
                 <div class='bg-primaryBlue flex items-center justify-center text-white p-[15px]'>
                     <ul class='flex items-center gap-[40px]'>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="workflow.html">Workflow</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="faq.html">FAQs</a></li>
-                    </ul>
+                        <ul class='flex items-center gap-[40px]'>
+                            <li><a href="index.html" id="home">Home</a></li>
+                            <li><a href="about.html" id="about">About Us</a></li>
+                            <li><a href="services.html" id="services">Services</a></li>
+                            <li><a href="workflow.html" id="workflow" class="bg-white p-[10px] rounded-[4px] text-primaryBlue">Workflow</a></li>
+                            <li><a href="contact.html" id="contact">Contact Us</a></li>
+                            <li><a href="faq.html" id="faq">FAQs</a></li>
+                        </ul>
                 </div>
             </div>
             <!-- mobile navbar -->
