worked on responsiveness

--- a/contact.html
+++ b/contact.html
@@ -149,10 +149,10 @@
       <div
         class="w-full flex flex-col md:flex-row items-start justify-evenly gap-[50px] mt-[70px]"
       >
-        <div>
+        <div class="w-full md:w-1/2">
           <h1 class="text-4xl font-bold">Get in touch</h1>
-          <form class="mt-[30px] flex flex-col gap-[20px]">
-            <div class="w-[350px] flex flex-col gap-[3px]">
+          <form class="w-full mt-[30px] flex flex-col gap-[20px]">
+            <div class="w-full md:w-[350px] flex flex-col gap-[3px]">
               <label class="font-bold"> Name </label>
               <input
                 type="text"
@@ -161,7 +161,7 @@
               />
             </div>
 
-            <div class="w-[350px] flex flex-col gap-[3px]">
+            <div class="w-full md:w-[350px] flex flex-col gap-[3px]">
               <label class="font-bold"> Your email </label>
               <input
                 type="email"
@@ -170,7 +170,7 @@
               />
             </div>
 
-            <div class="w-[350px] flex flex-col gap-[3px]">
+            <div class="w-full md:w-[350px] flex flex-col gap-[3px]">
               <label class="font-bold"> How can I we help? </label>
               <textarea
                 placeholder="Enter your message here"
@@ -179,7 +179,7 @@
             </div>
 
             <button
-              class="bg-primaryBlue text-lg text-white px-[30px] py-[8px]"
+              class="w-full md:w-[350px] bg-primaryBlue text-lg text-white px-[30px] py-[8px]"
             >
               Send me message
             </button>
@@ -197,7 +197,7 @@
       <div class="mt-[40px]">
         <h1 class="text-center text-2xl font-bold">Get in touch anytime</h1>
 
-        <div class=" mt-[40px] w-full flex justify-center items-center gap-[20px]">
+        <div class=" mt-[40px] w-full flex justify-center items-center flex-wrap gap-[20px]">
           <div class="w-[250px] flex flex-col gap-[10px]">
             <h1 class="font-bold">Email</h1>
             <p class="pl-[10px]">AmericanLegalClub@gmail.com</p>
