--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
             </div>
         </nav>
     </header>
-    <main class="w-full flex flex-col items-center px-[100px] py-[20px] bg-lightGray">
+    <main class="w-full flex flex-col items-center px-[20px] lg:px-[100px] py-[20px] bg-lightGray">
         <div id="about-section">
             <div class="w-full lg:w-[1000px] px-[20px] py-[50px] rounded-[5px] flex flex-col text-start">
                 <div>
