--- a/faq.html
+++ b/faq.html
@@ -222,7 +222,7 @@
         </div>
 
         <button class="bg-primaryBlue px-[30px] py-[10px] rounded-[4px] text-white text-lg">
-            Contact us
+            <a href="contact.html">Contact us</a>
         </button>
       </div>
     </main>
