--- a/services.html
+++ b/services.html
@@ -112,7 +112,7 @@
             </div>
         </nav>
     </header>
-    <main class="py-[30px] px-[100px]">
+    <main class="py-[30px] px-[20px] lg:px-[100px]">
         <div class="flex flex-col items-center gap-[3px]">
             <h1 class="text-primaryBlue text-3xl font-[800]">
                 <span class="text-primaryRed">Our</span> Services
