--- a/workflow.html
+++ b/workflow.html
@@ -120,7 +120,7 @@
             <div class="w-[100px] h-[2px] bg-primaryRed rounded-full"></div>
         </div>
 
-        <div class="flex items-center gap-[20px] mt-[30px]">
+        <div class="flex flex-col md:flex-row items-center gap-[20px] mt-[30px]">
             <div class="w-full md:w-1/2 border border-slate-500 rounded-[5px] p-[20px]">
                 <h1 class="font-bold text-lg">
                     How it works?
