change in layout

--- a/contact.html
+++ b/contact.html
@@ -204,8 +204,8 @@
     <div class="mt-[40px]">
       <h1 class="text-center text-2xl font-bold">Get in touch anytime</h1>
 
-      <div class="mt-[40px] w-full flex justify-center items-center flex-wrap gap-[20px]">
-        <div class="w-[250px] flex flex-col gap-[10px]">
+      <div class="whitespace-nowrap mt-[40px] w-full flex justify-center items-center flex-wrap gap-[20px]">
+        <div class="w-max flex flex-col gap-[10px]">
           <h1 class="font-bold">Email</h1>
           <p class="pl-[10px]">AmericanLegalClub@gmail.com</p>
           <div class="bg-slate-500 w-full h-[2px]"></div>
@@ -213,19 +213,19 @@
 
         <div class="w-[250px] flex flex-col gap-[10px]">
           <h1 class="font-bold">Phone</h1>
-          <p class="pl-[10px]">xxxxxxxxx</p>
+          <p class="pl-[10px]">800-123-4567</p>
           <div class="bg-slate-500 w-full h-[2px]"></div>
         </div>
 
         <div class="w-[250px] flex flex-col gap-[10px]">
           <h1 class="font-bold">Fax</h1>
-          <p class="pl-[10px]">xxxxxxxxx</p>
+          <p class="pl-[10px]">01-02341-222</p>
           <div class="bg-slate-500 w-full h-[2px]"></div>
         </div>
 
         <div class="w-[250px] flex flex-col gap-[10px]">
           <h1 class="font-bold">Address</h1>
-          <p class="pl-[10px]">xxxxxxxxx</p>
+          <p class="pl-[10px]">Address: 1234 road st, MD, 20157</p>
           <div class="bg-slate-500 w-full h-[2px]"></div>
         </div>
       </div>
@@ -235,26 +235,13 @@
   <footer>
     <!-- footer -->
     <div id="footer-section" class="w-full mt-[40px]">
-      <div class="w-full flex flex-col items-center gap-[30px] bg-primaryBlue pt-[40px] pb-[100px]">
+      <div class="w-full flex flex-col items-center gap-[10px] bg-primaryBlue pt-[10px] pb-[50px]">
         <div class="w-full lg:w-[90%] flex items-center justify-center md:gap-[20px] text-white p-[10px] md:px-[40px]">
           <div class="hidden md:block">
             <img src="assets/logo.png" alt="logo" class="w-[170px] h-[170px] object-contain" />
           </div>
 
           <div class="grow flex flex-col items-center gap-[30px]">
-            <div class="flex flex-col items-center gap-[10px]">
-              <h1 class="text-xl font-bold">Subscribe to our newsletter</h1>
-              <div class="bg-white flex items-center overflow-hidden rounded-[25px]">
-                <div class="flex items-center gap-[5px] px-[10px]">
-                  <i class="fa-regular fa-envelope"></i>
-                  <input type="email" placeholder="input your email" class="bg-transparent" />
-                </div>
-                <button class="bg-primaryRed text-lg text-white py-[6px] px-[15px] rounded-r-[25px]">
-                  Subscribe
-                </button>
-              </div>
-            </div>
-
             <ul class="flex items-center justify-center flex-wrap lg:flex-nowrap gap-[30px]">
               <li><a href="#" class="hover:bg-white p-[10px] hover:rounded-[4px] hover:text-primaryBlue">Terms and
                   Conditions</a></li>
