--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div
           class="absolute left-[50%] md:left-[70%] transform -translate-x-[50%] translate-y-[100%] bottom-[70px] md:translate-x-[0%] md:right-[20px]">
           <div
-            class="w-[350px] bg-primaryBlue/75 text-white text-[14px] lg:text-xl font-bold relative p-[20px] rounded-[10px]">
+            class="w-[350px] bg-primaryBlue/75 text-white text-[14px] lg:text-lg font-bold relative p-[20px] rounded-[10px]">
             <p>
               At American Legal Club, we offer unparalleled legal support
               through a network of seasoned attorneys, all at a
@@ -257,7 +257,7 @@
       <div id="services-section">
         <div class="w-full mt-[30px] lg:mt-[-50px] flex flex-col lg:flex-row items-center gap-[20px]">
           <div class="hidden lg:block">
-            <button class="bg-primaryBlue p-[10px] rounded-[4px] text-white text-xl">
+            <button class="shadow-2xl whitespace-nowrap bg-primaryBlue p-[10px] rounded-[4px] text-white text-xl">
               <a href="services.html">Explore Services</a>
             </button>
           </div>
@@ -273,7 +273,7 @@
               </div>
 
               <div class="mt-[20px] lg:hidden">
-                <button class="bg-primaryBlue p-[10px] rounded-[4px] text-white text-xl">
+                <button class="shadow-xl whitespace-nowrap p-[10px] rounded-[4px] text-white text-xl">
                   <a href="services.html">Explore Services</a>
                 </button>
               </div>
@@ -381,7 +381,7 @@
 
       <!-- footer -->
       <div id="footer-section" style="z-index: 5;" class="mt-[-40px] w-full">
-        <div class="w-full flex flex-col items-center gap-[30px] bg-primaryBlue pt-[120px] pb-[100px]">
+        <div class="w-full flex flex-col items-center gap-[10px] bg-primaryBlue pt-[40px] pb-[30px]">
           <div
             class="w-full lg:w-[90%] flex items-center justify-center md:gap-[20px] text-white p-[10px] md:px-[40px]">
             <div class="hidden md:block">
@@ -389,19 +389,6 @@
             </div>
 
             <div class="grow flex flex-col items-center gap-[30px]">
-              <div class="flex flex-col items-center gap-[10px]">
-                <h1 class="text-xl font-bold">Subscribe to our newsletter</h1>
-                <div class="bg-white flex items-center overflow-hidden rounded-[25px]">
-                  <div class="flex items-center gap-[5px] px-[10px]">
-                    <i class="fa-regular fa-envelope"></i>
-                    <input type="email" placeholder="input your email" class="bg-transparent" />
-                  </div>
-                  <button class="bg-primaryRed text-lg text-white py-[6px] px-[15px] rounded-r-[25px]">
-                    Subscribe
-                  </button>
-                </div>
-              </div>
-
               <ul class="flex items-center justify-center flex-wrap lg:flex-nowrap gap-[30px]">
                 <li><a href="#" class="hover:bg-white p-[10px] hover:rounded-[4px] hover:text-primaryBlue">Terms and
                     Conditions</a></li>
