--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
               </div>
 
               <div class="mt-[20px] lg:hidden">
-                <button class="shadow-xl whitespace-nowrap p-[10px] rounded-[4px] text-white text-xl">
+                <button class="shadow-xl whitespace-nowrap p-[10px] rounded-[4px] bg-primaryBlue text-white text-xl">
                   <a href="services.html">Explore Services</a>
                 </button>
               </div>
