--- a/faq.html
+++ b/faq.html
@@ -181,7 +181,7 @@
         </nav>
     </header>
 
-    <main class="w-full min-h-[70vh] flex flex-col items-center mt-[30px]">
+    <main class="w-full min-h-[70vh] flex flex-col items-center mt-[30px] p-[20px]">
         <div>
             <div class="w-full md:w-max">
                 <h1 class="text-primaryBlue text-3xl font-[800]">
