--- a/about.html
+++ b/about.html
@@ -211,7 +211,7 @@
           </div>
 
           <div class="w-full md:w-1/2">
-            <img src="assets/heroImage.jpg" alt="mainImage" class="w-full h-[500px] object-cover shadow-2xl" />
+            <img src="assets/america-flag.jpg" alt="mainImage" class="w-full h-[500px] object-cover shadow-2xl" />
           </div>
         </div>
 
