changed workflow layout

--- a/workflow.html
+++ b/workflow.html
@@ -203,18 +203,18 @@
       </h1>
       <div>
         <ul style="list-style: decimal" class="flex flex-col gap-[20px] mt-[30px] pl-[20px] text-lg">
-          <li>General legal advice and consultation.</li>
-          <li>Creditor defense expertise.</li>
-          <li>Assistance with financial education programs.</li>
-          <li>
+          <li class="w-max px-[20px] py-[8px] rounded-[25px] border border-slate-300 shadow">General legal advice and consultation.</li>
+          <li class="w-max px-[20px] py-[8px] rounded-[25px] border border-slate-300 shadow">Creditor defense expertise.</li>
+          <li class="w-max px-[20px] py-[8px] rounded-[25px] border border-slate-300 shadow">Assistance with financial education programs.</li>
+          <li class="w-max px-[20px] py-[8px] rounded-[25px] border border-slate-300 shadow">
             Comprehensive understanding of debtor rights and obligations.
           </li>
         </ul>
       </div>
     </div>
 
-    <div class="mt-[30px] flex flex-col gap-[20px] text-lg">
-      <h1 class="font-bold text-lg">Optional and Not Covered</h1>
+    <div class="mt-[30px] bg-slate-200 flex flex-col gap-[20px] text-lg p-[20px] rounded-[4px]">
+      <h1 class="font-bold text-lg underline underline-offset-8 decoration-primaryBlue">Optional and Not Covered</h1>
 
       <ul>
         <li>
